eks/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: chain-task-api-deployment
  labels:
    app: chain-task-api
spec:
  replicas: 1
  selector:
    matchLabels:
      app: chain-task-api
  template:
    metadata:
      labels:
        app: chain-task-api
    spec:
      containers:
      - name: chain-task-api
        image: 402744909175.dkr.ecr.eu-west-3.amazonaws.com/chain_task:latest
        ports:
        - containerPort: 8080
