eks/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: chain-task-api-service
spec:
  selector:
    app: chain-task-api
  ports:
    - protocol: TCP
      port: 80
      targetPort: 8080
  type: ClusterIP
